--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Con-a-Thon</title>
+  <style>
+    .ten {
+      display: flex;
+      flex-direction: row;
+    }
+    ul {
+      list-style-type: none;
+    }
+  </style>
+
 </head>
 <body>
   {{{body}}}
