create login/signup pages, user router and config folder

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,10 @@
 <h1>Con-A-Thon</h1>
-<a href="#">Sign Up/LogIn</a>
+<a href='/users/signup'>Signup</a>
+<a href='/users/login'>Login</a>
+{{!-- need to add if logged in, display log out statement --}}
+<a href='/users/logout'>Logout</a>
+
+{{!-- displays top ten conventions on home --}}
 <section class="ten">
   <p>
   <ul>
@@ -31,5 +36,3 @@
   </ul>
   </p>
 </section>
-
-<a href="/conventions/show">click here</a>
