make profile page view

--- a/views/conventions/show.hbs
+++ b/views/conventions/show.hbs
@@ -1,6 +1,10 @@
-{{this.name}}
-{{this.date}}
-{{this.location}}
-{{this.url}}
+<ul>
+<li>{{this.name}}</li>
+<li>{{this.date}}</li>
+<li>{{this.location}}</li>
+<li><a href="{{this.url}}">Their Website <3</a></li>
+</ul>
 
-<a href="/conventions/edit/{{id}}">Edit?</a>
+<p class="fave">Add this Con to your Go List!</p>
+
+<a href="/conventions/edit/{{id}}">Edit</a>
