--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,18 @@
 <h1>Con-A-Thon</h1>
-<a href='/users/signup'>Signup</a>
-<a href='/users/login'>Login</a>
+<p>Maximize Your Geek by Planning Out Your Cons!</p>
+<a href='/conventions/signup'>Signup</a>
+<a href='/conventions/login'>Login</a>
 {{!-- need to add if logged in, display log out statement --}}
-<a href='/users/logout'>Logout</a>
+<a href='/conventions/logout'>Logout</a>
 
+<a href='/conventions/index'>Profile</a>
+
+<h2>Top Ten Conventions</h2>
 {{!-- displays top ten conventions on home --}}
 <section class="ten">
   <p>
   <ul>
+    <h3>Anime</h3>
   {{#each animeCon}}
     <li>
       <a href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show">
@@ -18,6 +23,7 @@
 
   <p>
   <ul>
+    <h3>Comic</h3>
   {{#each comicCon}}
     <li>
       <a href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show">
@@ -28,6 +34,7 @@
 
   <p>
   <ul>
+    <h3>Game</h3>
   {{#each gameCon}}
     <li>
       <a href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show">
