--- a/views/conventions/new.hbs
+++ b/views/conventions/new.hbs
@@ -1,2 +1,21 @@
-<h1>Sup player</h1>
+<h1>Add in Your To-Go-To Convention</h1>
 
+<form action="/Conventions" method="POST">
+  <p>
+    <label for="name">Name</label>
+    <input type="text" name="name">
+    <br/>
+    <label for="date">Date</label>
+    <input type="text" name="date">
+    <br/>
+    <label for="location">Location</label>
+    <input type="text" name="location">
+    <br/>
+    <label for="url">URL</label>
+    <input type="text" name="url">
+    <br/>
+    <label for="genre">Anime, Comic, or Gaming?</label>
+    <input type="text" name="genre">
+  </p>
+  <input type="submit" value="Create">
+</form>
