--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,45 +1,42 @@
-<h1>Con-A-Thon</h1>
-<p>Maximize Your Geek by Planning Out Your Cons!</p>
-<a href='/conventions/signup'>Signup</a>
-<a href='/conventions/login'>Login</a>
-{{!-- need to add if logged in, display log out statement --}}
-<a href='/conventions/logout'>Logout</a>
+<header class="header-bg">
+  <h1 class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</h1>
+  <nav class="logs">
+    <a href='/conventions/signup' style="text-shadow: 0 1px white;font-size:17px;">Signup</a>
+    {{!-- <a href='/conventions/login'>Login</a>
+    <a href='/conventions/logout'>Logout</a>
+    <a href='/conventions/index'>Profile</a> --}}
+  </nav>
+  <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
+</header>
 
-<a href='/conventions/index'>Profile</a>
 
-<h2>Top Ten Conventions</h2>
-{{!-- displays top ten conventions on home --}}
-<section class="ten">
-  <p>
-  <ul>
-    <h3>Anime</h3>
-  {{#each animeCon}}
-    <li>
-      <a href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show">
-    </li>
-  {{/each}}
-  </ul>
-  </p>
+<div class="ten-container">
+  <h2 class="ten-header">Top Ten Conventions</h2>
+  {{!-- displays top ten conventions on home --}}
+  <section class="ten">
+    <ul>
+      <h3>Anime</h3>
+      {{#each animeCon}}
+        <li><a class="cons-list" href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show"></li>
+      {{/each}}
+    </ul>
 
-  <p>
-  <ul>
-    <h3>Comic</h3>
-  {{#each comicCon}}
-    <li>
-      <a href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show">
-    </li>
-  {{/each}}
-  </ul>
-  </p>
+    <ul>
+      <h3>Comic</h3>
+      {{#each comicCon}}
+        <li><a class="cons-list" href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show"></li>
+      {{/each}}
+    </ul>
 
-  <p>
-  <ul>
-    <h3>Game</h3>
-  {{#each gameCon}}
-    <li>
-      <a href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show">
-    </li>
-  {{/each}}
-  </ul>
-  </p>
-</section>
+    <ul>
+      <h3>Game</h3>
+      {{#each gameCon}}
+        <li><a class="cons-list" href="/conventions/show/{{this.id}}">{{this.name}}</a href="/conventions/show"></li>
+      {{/each}}
+    </ul>
+  </section>
+</div>
+
+<footer>
+  <p>Made by Nhi Nguyen | <a href="https://github.com/nnguy152">GitHub</a> | <a href="https://www.linkedin.com/in/nnguy152/">Linkedin</a></p>
+</footer>
