--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,14 +4,82 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Coiny|Ubuntu" rel="stylesheet">
   <title>Con-a-Thon</title>
   <style>
+    .header-bg{
+      background: orange;
+      background-position: -10px;
+      box-shadow: 0 10px 3px blue;
+      position: sticky;
+      top:0;
+    }
+    header{
+      padding: 10px 50px 5px 50px;
+    }
+    .conthon {
+      font-family: 'Coiny', cursive;
+      font-size: 50px;
+      margin: 0 auto;
+      padding-bottom: -10px;
+      width: 90%;
+      height: 60px;
+      text-align: left;
+      float:left;
+      color: white;
+      text-shadow: 2px 2px blue;
+    }
+    .about {
+      text-shadow: 0 1px white;
+    }
+    .logs {
+      text-align:right;
+      float:right;
+      margin-top: 30px;
+      margin-right: 30px;
+    }
+    .logs a {
+      text-decoration: none;
+      font-family: 'Ubuntu', sans-serif;
+      color: black;
+      font-size: 15px;
+    }
+    body {
+      font-family: 'Ubuntu', sans-serif;
+      
+    }
+    .ten-container {
+      border: 2px solid black;
+      text-align: center;
+      width: 800px;
+      margin: 50px 25% 10px;
+    }
     .ten {
+      border: 2px solid black;
       display: flex;
+      justify-content: center;
       flex-direction: row;
     }
     ul {
+      border: 2px solid green;
       list-style-type: none;
+      padding: 0 30px;
+      width: 200px;
+    }
+    .cons-list {
+      color: black;
+    }
+    li {
+      margin: 15px;
+    }
+    footer p a {
+      text-decoration: none;
+      color: black;
+    }
+    footer {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 12px;
     }
   </style>
 
