--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,9 +44,47 @@
       color: black;
       font-size: 15px;
     }
+    .overlay {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.7);
+      transition: opacity 500ms;
+      visibility: hidden;
+      opacity: 0;
+    }
+    .overlay:target {
+      visibility: visible;
+      opacity: 1;
+    }
+    .popup {
+      margin: 200px auto;
+      padding: 20px;
+      background:orange;
+      border-radius: 5px;
+      width: 400px;
+      position: relative;
+    }
+    .popup .close {
+      position: absolute;
+      left: -500px;
+      top: -200px;
+      z-index: -1;
+      height: 400%;
+      width: 300%;
+    }
+    .content {
+      margin: auto;
+      width: 90%;
+      border: 3px solid blue;
+      border-radius: 5px;
+      padding: 10px;
+      background: white;
+    }
     body {
       font-family: 'Ubuntu', sans-serif;
-      
     }
     .ten-container {
       border: 2px solid black;
