add header to all pages

--- a/views/conventions/show.hbs
+++ b/views/conventions/show.hbs
@@ -1,16 +1,20 @@
-<ul>
-<li>{{this.name}}</li>
-<li>{{this.date}}</li>
-<li>{{this.location}}</li>
-<li><a href="{{this.url}}">Visit their Website</a></li>
-</ul>
+<header class="header-bg">
+  <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
+  <nav class="logs">
+    {{!-- <a href='/conventions/signup' style="text-shadow: 0 1px white;font-size:17px;">Signup</a> --}}
+    {{!-- <a href='/conventions/login'>Login</a>
+    <a href='/conventions/logout'>Logout</a>--}}
+    <a href='/conventions/index'>Profile</a> 
+  </nav>
+  <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
+</header>
 
 {{!-- <p class="fave">Add this Con to your Go List!</p> --}}
-<form method="GET" action="/convention/index">
+{{!-- <form method="GET" action="/convention/index">
   <label for="{{this.id}}">
     <input type="submit" value="FAVE">
   </label>
-</form>
+</form> --}}
 
 
-<a href="/conventions/edit/{{id}}">Edit</a>
+{{!-- <a href="/conventions/edit/{{id}}">Edit</a> --}}
