--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,3 +1,13 @@
+<header class="header-bg">
+  <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
+  <nav class="logs">
+    {{!-- <a href='/conventions/signup' style="text-shadow: 0 1px white;font-size:17px;">Signup</a> --}}
+    {{!-- <a href='/conventions/login'>Login</a>
+    <a href='/conventions/logout'>Logout</a>--}}
+    <a href='/conventions/index'>Profile</a> 
+  </nav>
+  <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
+</header>
 <h1>Signup</h1>
 
 {{#if message}}
