--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,8 +3,8 @@
   <nav class="logs">
     <a href='/conventions/signup' style="text-shadow: 0 1px white;font-size:17px;">Signup</a>
     {{!-- <a href='/conventions/login'>Login</a>
-    <a href='/conventions/logout'>Logout</a>
-    <a href='/conventions/index'>Profile</a> --}}
+    <a href='/conventions/logout'>Logout</a>--}}
+    <a href='/conventions/index'>Profile</a> 
   </nav>
   <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
@@ -28,6 +28,11 @@
                 <li>{{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
+              <form method="GET" action="/conventions/index">
+                <label for="{{this.id}}">
+                  <input type="submit" value="Add Con to To-Go List">
+                </label>
+              </form>
             </div>
           </div>
       {{/each}}
@@ -47,6 +52,11 @@
                 <li>{{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
+              <form method="GET" action="/convention/index">
+                <label for="{{this.id}}">
+                  <input type="submit" value="Add Con to To-Go List">
+                </label>
+              </form>
             </div>
           </div>
       {{/each}}
@@ -66,6 +76,11 @@
                 <li>{{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
+              <form method="GET" action="/convention/index">
+                <label for="{{this.id}}">
+                  <input type="submit" value="Add Con to To-Go List">
+                </label>
+              </form>
             </div>
           </div>
       {{/each}}
