--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,6 +18,7 @@
       padding: 10px 50px 5px 50px;
     }
     .conthon {
+      text-decoration: none;
       font-family: 'Coiny', cursive;
       font-size: 50px;
       margin: 0 auto;
