--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -1,10 +1,10 @@
 <header class="header-bg">
   <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
   <nav class="logs">
-    {{!-- <a href='/conventions/signup' style="text-shadow: 0 1px white;font-size:17px;">Signup</a> --}}
-    {{!-- <a href='/conventions/login'>Login</a>
-    <a href='/conventions/logout'>Logout</a>--}}
-    <a href='/conventions/index'>Profile</a> 
+    {{!-- <a href='/conventions/signup' class="menu">Signup</a> --}}
+    {{!-- <a href='/conventions/login' class="menu">Login</a>
+    <a href='/conventions/logout' class="menu">Logout</a>--}}
+    <a href='/conventions/index' class="menu">Profile</a> 
   </nav>
   <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
@@ -12,4 +12,50 @@
 <h1>Hi</h1>
 
 
-<a href="/conventions/new">Not interested in any of the conventions listed? Add your own!</a>
+<ul>
+  {{#each con}}
+    <li><a href="#popup{{this.id}}">{{this.name}}</a></li>
+    <div id="popup{{this.id}}" class="overlay">
+      <div class="popup">
+        <a class="close" href="index"></a>
+        <ul class="content">
+          <li>{{this.name}}</li>
+          <li>{{this.date}}</li>
+          <li>{{this.location}}</li>
+          <li><a href="{{this.url}}">Visit their Website</a></li>
+        </ul>
+        <form action="/Convention/{{id}}?_method=delete" method="POST">
+          <input type="submit" value="delete">
+        </form>
+      </div>
+    </div>
+  {{/each}}
+</ul>
+
+<a href="#popup">Not interested in any of the conventions listed? Add your own!</a>
+
+<div id="popup" class="overlay">
+  <div class="popup">
+    <a class="close" href="index"></a>
+      <h1>Add in Your Convention</h1>
+      <form action="/Convention" method="POST">
+        <p>
+          <label for="name">Name</label>
+          <input type="text" name="name">
+          <br/>
+          <label for="date">Date</label>
+          <input type="text" name="date">
+          <br/>
+          <label for="location">Location</label>
+          <input type="text" name="location">
+          <br/>
+          <label for="url">URL</label>
+          <input type="text" name="url">
+          <br/>
+          <label for="genre">Anime, Comic, or Gaming?</label>
+          <input type="text" name="genre">
+        </p>
+        <input type="submit" value="Create">
+      </form>
+  </div>
+</div>
