--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <header class="header-bg">
   <h1 class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</h1>
   <nav class="logs">
-    <a href='/conventions/signup' class="menu">Signup</a>
+    {{!-- <a href='/conventions/signup' class="menu">Signup</a> --}}
     {{!-- <a href='/conventions/login' class="menu">Login</a>
     <a href='/conventions/logout' class="menu">Logout</a>--}}
     <a href='/conventions/index' class="menu">Profile</a> 
