--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <header class="header-bg">
-  <h1 class="conthon"><span><img src="" style="width: 50px;"></span>Con-A-Thon</h1>
+  <h1 class="conthon">Con-A-Thon</h1>
   <nav class="logs">
     {{!-- <a href='/conventions/signup' class="menu">Signup</a> --}}
     {{!-- <a href='/conventions/login' class="menu">Login</a>
