--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -37,7 +37,7 @@
   <div class="popup">
     <a class="close" href="index"></a>
       <h1>Add in Your Convention</h1>
-      <form action="/Convention" method="POST">
+      <form action="/Conventions" method="POST">
         <p>
           <label for="name">Name</label>
           <input type="text" name="name">
