--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -23,9 +23,9 @@
           <li>{{this.location}}</li>
           <li><a href="{{this.url}}">Visit their Website</a></li>
         </ul>
-        {{!-- <form action="/Convention/{{id}}?_method=delete" method="POST">
+        <form action="/Conventions/{{this.id}}?_method=delete" method="POST">
           <input type="submit" value="delete">
-        </form> --}}
+        </form>
       </div>
     </div>
   {{/each}}
