--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,11 @@
 <header class="header-bg">
   <h1 class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</h1>
   <nav class="logs">
-    {{!-- <a href='/conventions/signup' class="menu">Signup</a> --}}
-    {{!-- <a href='/conventions/login' class="menu">Login</a>
-    <a href='/conventions/logout' class="menu">Logout</a>--}}
-    <a href='/conventions/index' class="menu">Profile</a> 
+    <a href='/conventions/signup'>Signup</a>
+    <a href='/conventions/login'>Login</a>
+    <a href='/conventions/index'><img src="/profile.png" style="width:35px;vertical-align: -10px;"></a> 
   </nav>
-  <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
+  <p class="about">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
 
 
@@ -27,11 +26,6 @@
                 <li>{{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
-              <form method="GET" action="/conventions/index">
-                <label for="{{this.id}}">
-                  <input type="submit" value="Add Con to To-Go List">
-                </label>
-              </form>
             </div>
           </div>
       {{/each}}
@@ -50,11 +44,6 @@
                 <li>{{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
-              <form method="GET" action="/convention/index">
-                <label for="{{this.id}}">
-                  <input type="submit" value="Add Con to To-Go List">
-                </label>
-              </form>
             </div>
           </div>
       {{/each}}
@@ -73,18 +62,9 @@
                 <li>{{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
-              <form method="GET" action="/convention/index">
-                <label for="{{this.id}}">
-                  <input type="submit" value="Add Con to To-Go List">
-                </label>
-              </form>
             </div>
           </div>  
       {{/each}}
     </ul>
   </section>
 </div>
-
-<footer>
-  <p>Made by Nhi Nguyen | <a href="https://github.com/nnguy152">GitHub</a> | <a href="https://www.linkedin.com/in/nnguy152/">Linkedin</a></p>
-</footer>
