--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,132 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Coiny|Ubuntu" rel="stylesheet">
+  <link rel="stylesheet"  type="text/css" href="/style.css">
+  <link rel="icon" href="/favicon1.png">
   <title>Con-a-Thon</title>
-  <style>
-    .header-bg{
-      background: orange;
-      background-position: -10px;
-      box-shadow: 0 10px 3px blue;
-      position: sticky;
-      top:0;
-    }
-    header{
-      padding: 10px 50px 5px 50px;
-    }
-    .conthon {
-      text-decoration: none;
-      font-family: 'Coiny', cursive;
-      font-size: 50px;
-      margin: 0 auto;
-      padding-bottom: -10px;
-      width: 40%;
-      height: 60px;
-      text-align: left;
-      float:left;
-      color: white;
-      text-shadow: 2px 2px blue;
-    }
-    .about {
-      text-shadow: 0 1px white;
-    }
-    .logs {
-      text-align:right;
-      float:right;
-      margin-top: 30px;
-      margin-right: 30px;
-    }
-    .logs a {
-      text-decoration: none;
-      font-family: 'Ubuntu', sans-serif;
-      color: black;
-      font-size: 15px;
-    }
-    .overlay {
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: rgba(0, 0, 0, 0.7);
-      transition: opacity 500ms;
-      visibility: hidden;
-      opacity: 0;
-    }
-    .overlay:target {
-      visibility: visible;
-      opacity: 1;
-    }
-    .popup {
-      margin: 200px auto;
-      padding: 20px;
-      background:orange;
-      border-radius: 5px;
-      width: 400px;
-      position: relative;
-    }
-    .popup .close {
-      position: absolute;
-      left: -500px;
-      top: -200px;
-      z-index: -1;
-      height: 400%;
-      width: 300%;
-    }
-    .content {
-      margin: auto;
-      width: 90%;
-      border: 3px solid blue;
-      border-radius: 5px;
-      padding: 10px;
-      background: white;
-    }
-    .menu {
-    text-shadow: 0 1px white;
-    font-size:18px;
-    }
-    body {
-      font-family: 'Ubuntu', sans-serif;
-      background: lightgrey;
-    }
-    .ten-container {
-      position: static;
-      text-align: center;
-      width: 800px;
-      margin: 0 15%;
-      padding: 20px 10% 10px;
-      z-index: -1;
-      background: white;
-    }
-    .ten {
-      display: flex;
-      justify-content: center;
-      flex-direction: row;
-    }
-    ul {
-      border: 2px solid black;
-      list-style-type: none;
-      padding: 0 30px;
-      width: 200px;
-    }
-    .cons-list {
-      color: black;
-    }
-    li {
-      margin: 15px;
-    }
-    footer p a {
-      text-decoration: none;
-      color: black;
-    }
-    footer {
-      position: static;
-      margin: 30px 41% 0;
-      font-size: 12px;
-    }
-  </style>
-
 </head>
 <body>
   {{{body}}}
+<footer>
+  <p>Made by Nhi Nguyen | <a href="https://github.com/nnguy152">GitHub</a> | <a href="https://www.linkedin.com/in/nnguy152/">Linkedin</a></p>
+  <p> <a href="https://icons8.com">Icon by Icons8</a></p>
+</footer>
 </body>
 </html>
