--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,19 +1,17 @@
 <header class="header-bg">
   <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
   <nav class="logs">
-    <a href='/conventions/signup' class="menu">Signup</a>
-    {{!-- <a href='/conventions/login' class="menu">Login</a>
-    <a href='/conventions/logout' class="menu">Logout</a>--}}
-    <a href='/conventions/index' class="menu">Profile</a> 
+    <a href='/conventions/signup'>Signup</a>
   </nav>
   <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
 
+<div class="ten-container">
 <h1>LogIn</h1>
 
-{{#if message}}
+{{!-- {{#if message}}
   <div>{{message}}</div>
-{{/if}}
+{{/if}} --}}
 
 <form method="post" action="/login">
   <div>
@@ -28,3 +26,4 @@
 
   <input type="submit">
 </form>
+</div>
