--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,18 +1,19 @@
 <header class="header-bg">
   <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
   <nav class="logs">
-    {{!-- <a href='/conventions/signup' class="menu">Signup</a> --}}
-    {{!-- <a href='/conventions/login' class="menu">Login</a>
-    <a href='/conventions/logout' class="menu">Logout</a>--}}
-    <a href='/conventions/index' class="menu">Profile</a> 
+    <a href='/conventions/login'>Login</a>
   </nav>
-  <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
+  <p class="about">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
+
+<div class="ten-container">
 <h1>Signup</h1>
 
-{{#if message}}
+{{!-- {{#if message}}
   <div class="alert alert-danger">{{message}}</div>
-{{/if}}
+{{else}}
+  <div>Hey!  {{message}}</div>
+{{/if}} --}}
 
 <form method="post" action="/conventions/signup">
   <div class="form-group">
@@ -27,3 +28,4 @@
 
   <input class="btn btn-default" type="submit">
 </form> 
+</div>
