--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,4 +1,4 @@
-<header class="header-bg">
+{{!-- <header class="header-bg">
   <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
   <nav class="logs">
     <a href='#'>Logout</a>
@@ -6,4 +6,4 @@
   </nav>
   <p class="about">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
-<h1>O__O</h1>
+<h1>O__O</h1> --}}
