--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Coiny|Ubuntu" rel="stylesheet">
-  <link rel="stylesheet"  type="text/css" href="/style.css">
+  <link rel="stylesheet"  type="text/css" href="/styles.css">
   <link rel="icon" href="/favicon1.png">
   <title>Con-a-Thon</title>
 </head>
