--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,9 +9,9 @@
 <div class="ten-container">
 <h1>LogIn</h1>
 
-{{!-- {{#if message}}
+{{#if message}}
   <div>{{message}}</div>
-{{/if}} --}}
+{{/if}}
 
 <form method="post" action="/login">
   <div>
@@ -24,6 +24,7 @@
     <input type="password" name="password" id="password">
   </div>
 
-  <input type="submit">
+  {{!-- <input type="submit"> --}}
+  <button disabled>Submit</button>
 </form>
 </div>
