--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -9,9 +9,9 @@
 <div class="ten-container">
 <h1>Signup</h1>
 
-{{#if message}}
+{{!-- {{#if message}}
   <div class="alert alert-danger">{{message}}</div>
-{{/if}}
+{{/if}} --}}
 
 <form method="post" action="/conventions/signup">
   <div class="form-group">
