--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,12 +8,45 @@
   <link rel="stylesheet"  type="text/css" href="/styles.css">
   <link rel="icon" href="/favicon1.png">
   <title>Con-a-Thon</title>
+  <style>
+    html {
+      display: block;
+    }
+    html, body {
+      width: 100%;
+      height: 100%;
+      position: relative; 
+    }
+    body {
+      display: block;
+      font-family: 'Ubuntu', sans-serif;
+      margin: 0 auto;
+      background: black;
+    }
+    footer p a, footer p {
+      text-decoration: none;
+      color: white;
+      margin: 0;
+      padding-top: 3px;
+    }
+    footer {
+      background: #F85B1A;
+      height: 50px;
+      text-align: center;
+      display: block;
+      position: sticky;
+      width: 100%;
+      font-size: 12px;
+      box-shadow: 0 -10px 3px #072083;
+      padding-top: 18px;
+    }
+  </style>
 </head>
 <body>
   {{{body}}}
-<footer>
-  <p>Made by Nhi Nguyen | <a href="https://github.com/nnguy152">GitHub</a> | <a href="https://www.linkedin.com/in/nnguy152/">Linkedin</a></p>
-  <p> <a href="https://icons8.com">Icon by Icons8</a></p>
-</footer>
+  <footer>
+    <p>Made by Nhi Nguyen | <a href="https://github.com/nnguy152">GitHub</a> | <a href="https://www.linkedin.com/in/nnguy152/">Linkedin</a></p>
+    <p> <a href="https://icons8.com">Icon by Icons8</a> | <a href="https://wallpapersafari.com/black-and-white-batman-wallpaper/">Wallpaper by Martin Driver</a></p>
+  </footer>
 </body>
 </html>
