--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,3 @@
-html {
-  width: 100%;
-  margin: 0 auto;
-}
 .header-bg{
   background: #F85B1A;
   background-position: -10px;
@@ -11,12 +7,6 @@ html {
 }
 header{
   padding: 10px 50px 5px 50px;
-}
-.ten-header {
-  font-size: 35px;
-  margin-bottom: 10px;
-  background: white;
-  text-align: center;
 }
 img {
   border-radius: 10px;
@@ -33,10 +23,10 @@ img {
   text-align: left;
   float:left;
   color: white;
-  text-shadow: 2px 2px #072083;
+  text-shadow: 3px 2px #072083;
 }
 .about {
-  text-shadow: 0 1px white;
+  color: white;
   width: 600px;
 }
 .logs {
@@ -54,97 +44,82 @@ img {
   font-size: 18px;
   padding: 5px;
 }
-.overlay {
-  background: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  visibility: hidden;
-  opacity: 0;
+
+/* MAIN SECTION */
+.line { 
+  height:2px;
+  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 450, from(#072083), to(#ffffff));
 }
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
+.mini-line { 
+  height:2px;
+  background: -webkit-gradient(radial, 50% 50%, 0, 40% 50%, 150, from(#072083), to(#ffffff));
 }
-.popup {
-  margin: 200px auto;
-  padding: 20px;
-  padding-bottom: 0px;
-  background:#F85B1A;
-  border-radius: 5px;
-  width: 250px;
-  position: static;
-}
-.my-con-edit {
-  border:2px black solid;
-  background:none;
-  margin-top: 217px;
-  margin-right: 12%;
-  border-radius: 0;
-  height: 380px;
-  width: 55%;
-  float: right;
-}
-.popup .close {
-  position: absolute;
-  left: -150px;
-  top: -200px;
-  z-index: -1;
-  height: 500%;
-  width: 600%;
-  border: 5px dotted green;
-}
-.popup .xed {
-  position: sticky;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  margin-left: 98%;
-  color: black;
-}
-.content {
-  margin: auto;
-  width: 90%;
-  border: 3px solid #072083;
-  border-radius: 5px;
-  padding: 10px;
-  background: white;
-}
-body {
-  font-family: 'Ubuntu', sans-serif;
-  background: black;
+.displayed {
+  background-image: url("comicbg.jpg");
+  background-size: 800px;
+  background-position: -50px 150px;
 }
 .ten-container {
-  position: static;
-  text-align: center;
-  padding: 20px 12% 10px;
-  z-index: -1;
   background: white;
-  height: 600px;
+  overflow: scroll;
+  text-align: center;
+  padding: 10px 5% 10px;
+  margin: auto auto;
+  z-index: -1;
+  width: 800px;
+}
+.plus {
+  padding: 0 5% 0 30%;
+  height: 300px;
+  text-align: left;
+}
+.join {
+  width: 300px;
+  padding: 20px 0 3px 0;
+  font-size: 20px;
+  border: none;
+  border-bottom: 1px #072083 solid;
+  outline: none;
+}
+.ten-header {
+  font-size: 35px;
+  margin-bottom: 10px;
+  background: white;
+  text-align: center;
 }
 .ten {
   display: flex;
   justify-content: center;
   flex-direction: row;
+  width: 800px;
+}
+.ten-list-header {
+  margin-bottom: 5px;
 }
 ul {
-  border: 2px solid black;
   list-style-type: none;
   padding: 0 30px;
   width: 200px;
 }
+li {
+  margin: 15px;
+}
+
+/* top ten list */
 .cons-list {
   color: black;
+  text-decoration: none;
+  font-size: 18px;
+}
+.cons-list:hover {
+  color: #F85B1A;
+  font-size: 20px;
 }
 .my-con {
   background: white;
   background-position: -50px;
 }
-li {
-  margin: 15px;
-}
+
 form p {
   text-align: left;
 }
@@ -167,24 +142,69 @@ form p {
 form h4 {
   margin: 10px 0;
 }
-footer p a, footer p {
-  text-decoration: none;
-  color: white;
-  margin: 0;
-}
-footer {
-  background: #F85B1A;
-  height: 50px;
-  text-align: center;
-  position: static;
-  width: 100%;
-  font-size: 12px;
-  box-shadow: 0 -10px 3px #072083;
-  position: sticky;
-  padding-top: 15px;
-}
 .my-cons-list {
   height: 400px;
+}
+
+/* POPUP STYLES */
+.overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+.popup {
+  margin: 200px auto;
+  padding: 20px;
+  padding-bottom: 20px;
+  background:#F85B1A;
+  border-radius: 5px;
+  width: 250px;
+  position: static;
+}
+.my-con-edit {
+  border:2px black solid;
+  background:none;
+  margin-top: 217px;
+  margin-right: 12%;
+  border-radius: 0;
+  height: 380px;
+  width: 30%;
+  float: right;
+}
+.popup .close {
+  position: absolute;
+  left: -150px;
+  top: -200px;
+  z-index: -1;
+  height: 500%;
+  width: 600%;
+  border: 5px dotted green;
+}
+/* .popup .xed {
+  position: sticky;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  margin-left: 98%;
+  color: black;
+} */
+.content {
+  margin: auto;
+  height: 90%;
+  width: 90%;
+  border: 3px solid #072083;
+  border-radius: 5px;
+  padding: 5px;
+  background: white;
 }
 
 @media screen and (max-width: 1240px) {
