--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,3 +1,4 @@
+<div class="displayed">
 <header class="header-bg">
   <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
   <nav class="logs">
@@ -13,18 +14,18 @@
   <div class="alert alert-danger">{{message}}</div>
 {{/if}} --}}
 
-<form method="post" action="/conventions/signup">
+<form class="plus" method="post" action="/conventions/signup">
   <div class="form-group">
-    <label for="username">Username</label>
-    <input class="form-control" type="text" name="username" id="username">
+    <label for="email">Email</label>
+    <input class="form-control join" type="text" name="email" id="email">
   </div>
 
   <div class="form-group">
-    <label for="username">Password</label>
-    <input class="form-control" type="password" name="password" id="password">
+    <label for="password">Password</label>
+    <input class="form-control join" type="password" name="password" id="password">
   </div>
 
-  {{!-- <input class="btn btn-default" type="submit"> --}}
-  <button disabled>Submit</button>
+  <input class="btn btn-default" type="submit">
 </form> 
+</div>
 </div>
