--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,9 @@
 <header class="header-bg">
   <h1 class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</h1>
   <nav class="logs">
-    <a href='/conventions/signup'>Signup</a>
-    <a href='/conventions/login'>Login</a>
-    <a href='/conventions/index'><img src="/profile.png" style="width:35px;vertical-align: -10px;"></a> 
+    <a class="nav-links" href='/conventions/signup'>Signup</a>
+    <a class="nav-links" href='/conventions/login'>Login</a>
+    <a class="nav-links" href='/conventions/index'><img src="/profile.png" style="width:35px;vertical-align: -10px;"></a> 
   </nav>
   <p class="about">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
