--- a/public/styles.css
+++ b/public/styles.css
@@ -44,6 +44,10 @@ img {
   font-size: 18px;
   padding: 5px;
 }
+.nav-links:hover {
+  color: #072083;
+  font-size: 20px;
+}
 
 /* MAIN SECTION */
 .line { 
