--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -2,7 +2,7 @@
 <header class="header-bg">
   <a href="/" class="conthon"><span><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/6/67/Link.gif/revision/latest?cb=20090506153048" style="width: 50px;"></span>Con-A-Thon</a>
   <nav class="logs">
-    <a href='/conventions/login'>Login</a>
+    <a class="nav-links" href='/conventions/login'>Login</a>
   </nav>
   <p class="about">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
