--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -19,7 +19,7 @@
 
         <div id="popup{{this.id}}" class="overlay" style="background:none;">
           <div class="popup my-con-edit">
-            <a class="xed" href="#">&times;</a>
+            <a href="#">&times;</a>
             <ul class="content">
               <li>{{this.name}}</li>
               <li>{{this.date}}</li>
@@ -53,7 +53,8 @@
         </div>
       {{/each}}
 
-      <a href="#popup" style='vertical-align:bottom;'>Add A Con!</a>
+        <a href="#popup">Add A Con!</a>
+
     </ul>
   </div>
 
