--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,10 +34,10 @@
             <div class="popup">
               <a class="close" href="#"></a>
               <ul class="content">
-                <li>{{this.name}}</li>
-                <li>{{this.date}}</li>
-                <li>{{this.location}}</li>
-                <li><a href="{{this.url}}">Visit their Website</a></li>
+                <li><span>Name:</span> {{this.name}}</li>
+                <li><span>When:</span> {{this.date}}</li>
+                <li><span>Where:</span> {{this.location}}</li>
+                <li><a href="{{this.url}}">Visit their Website!</a></li>
               </ul>
             </div>
           </div>
@@ -53,9 +53,9 @@
             <div class="popup">
               <a class="close" href="#"></a>
               <ul class="content">
-                <li>{{this.name}}</li>
-                <li>{{this.date}}</li>
-                <li>{{this.location}}</li>
+                <li><span>Name:</span> {{this.name}}</li>
+                <li><span>When:</span> {{this.date}}</li>
+                <li><span>Where:</span> {{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
             </div>
@@ -72,9 +72,9 @@
             <div class="popup">
               <a class="close" href="#"></a>
               <ul class="content">
-                <li>{{this.name}}</li>
-                <li>{{this.date}}</li>
-                <li>{{this.location}}</li>
+                <li><span>Name:</span> {{this.name}}</li>
+                <li><span>When:</span> {{this.date}}</li>
+                <li><span>Where:</span> {{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website</a></li>
               </ul>
             </div>
