--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -53,7 +53,7 @@
         </div>
       {{/each}}
 
-        <a href="#popup">Add A Con!</a>
+        <a class="add" href="#popup">Add A Con!</a>
 
     </ul>
   </div>
