--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -22,10 +22,10 @@
 
   <div class="form-group">
     <label for="password">Password</label>
-    <input class="form-control join" type="password" name="password" id="password">
+    <input class="form-control join pass" type="password" name="password" id="password">
   </div>
 
-  <input class="btn btn-default" type="submit">
+  <input class="btn buttons" type="submit">
 </form> 
 </div>
 </div>
