--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,10 +22,10 @@
 
   <div>
     <label for="password">Password</label>
-    <input class="join" type="password" name="password" id="password">
+    <input class="join pass" type="password" name="password" id="password">
   </div>
 
-  <input type="submit">
+  <input class="btn buttons" type="submit">
 </form>
 </div>
 </div>
